images service with routes and htmls modified

--- a/src/app/pages/anthropometric-measurements/components/default/default.html
+++ b/src/app/pages/anthropometric-measurements/components/default/default.html
@@ -1,3 +1,9 @@
 <div class="avatar">
+
+    @if(highlightImage){
+    <img [src]="highlightImage" alt="Área resaltada">
+    } @else {
     <img src="/assets/avatar-pngs/antomia-blank.png" alt="">
+    }
+
 </div>
