--- a/src/app/pages/anthropometric-measurements/components/step-two/step-two.html
+++ b/src/app/pages/anthropometric-measurements/components/step-two/step-two.html
@@ -2,22 +2,22 @@
     <div class="left-column">
         <div class="skinfold-field">
             <label>Bíceps</label>
-            <input type="number" formControlName="biceps" placeholder="Ingrese el pliegue" step="0.1" />
+            <input type="number" formControlName="biceps" placeholder="Ingrese el pliegue" step="0.1" (focus)="onFieldFocus('biceps')" (blur)="onFieldBlur()" />
         </div>
 
         <div class="skinfold-field">
             <label>Suprailíaco</label>
-            <input type="number" formControlName="suprailiaco" placeholder="Ingrese el pliegue" step="0.1" />
+            <input type="number" formControlName="suprailiaco" placeholder="Ingrese el pliegue" step="0.1" (focus)="onFieldFocus('suprailiaco')" (blur)="onFieldBlur()" />
         </div>
 
         <div class="skinfold-field">
             <label>Abdominal</label>
-            <input type="number" formControlName="abdominal" placeholder="Ingrese el pliegue" step="0.1" />
+            <input type="number" formControlName="abdominal" placeholder="Ingrese el pliegue" step="0.1" (focus)="onFieldFocus('abdominal')" (blur)="onFieldBlur()" />
         </div>
 
         <div class="skinfold-field">
             <label>Pectoral</label>
-            <input type="number" formControlName="pectoral" placeholder="Ingrese el pliegue" step="0.1" />
+            <input type="number" formControlName="pectoral" placeholder="Ingrese el pliegue" step="0.1" (focus)="onFieldFocus('pectoral')" (blur)="onFieldBlur()" />
         </div>
     </div>
 
@@ -29,22 +29,22 @@
 
         <div class="skinfold-field">
             <label>Tríceps</label>
-            <input type="number" formControlName="triceps" placeholder="Ingrese el pliegue" step="0.1" />
+            <input type="number" formControlName="triceps" placeholder="Ingrese el pliegue" step="0.1" (focus)="onFieldFocus('triceps')" (blur)="onFieldBlur()" />
         </div>
 
         <div class="skinfold-field">
             <label>Subescapular</label>
-            <input type="number" formControlName="subescapular" placeholder="Ingrese el pliegue" step="0.1" />
+            <input type="number" formControlName="subescapular" placeholder="Ingrese el pliegue" step="0.1" (focus)="onFieldFocus('subescapular')" (blur)="onFieldBlur()" />
         </div>
 
         <div class="skinfold-field">
             <label>Ileocrestal</label>
-            <input type="number" formControlName="ileocrestal" placeholder="Ingrese el pliegue" step="0.1" />
+            <input type="number" formControlName="ileocrestal" placeholder="Ingrese el pliegue" step="0.1" (focus)="onFieldFocus('ileocrestal')" (blur)="onFieldBlur()" />
         </div>
 
         <div class="skinfold-field">
             <label>Axilar medial</label>
-            <input type="number" formControlName="axilaMedial" placeholder="Inserte el pliegue" step="0.1" />
+            <input type="number" formControlName="axilaMedial" placeholder="Inserte el pliegue" step="0.1" (focus)="onFieldFocus('axilaMedial')" (blur)="onFieldBlur()" />
         </div>
     </div>
 
