--- a/src/app/layout/views-layout/views-layout.css
+++ b/src/app/layout/views-layout/views-layout.css
@@ -1,16 +1,24 @@
 .container {
   display: flex;
+  width: 100%;
   height: 100vh;
   flex-direction: row;
+  padding: 0 40px 0 0;
+  box-sizing: border-box;
 }
 
 .sidebar{
   display: flex;
-  padding: 40px 0 40px 0px;
+  padding: 30px 0;
+  top: 1.5vh;
+  left: 20px;
+  bottom: 2.5vh;
+  height: auto;
+  max-height: calc(100vh - 10vh);
   position: fixed;
-  min-height: 500px;
   z-index: 100;
   transition: all 0.3s ease;
+  box-sizing: border-box;
 }
 
 app-sidebar{
