--- a/src/styles.css
+++ b/src/styles.css
@@ -18,5 +18,6 @@ body{
     margin: 0;
     padding: 0;
     font-family: var(--font-main);
-    max-width: 1510px;
+    min-width: 100vw;
+    min-height: 100vh;
 }
