redireccion de paciente a estadisticas

--- a/src/app/pages/patient/components/stats/stats.html
+++ b/src/app/pages/patient/components/stats/stats.html
@@ -1,5 +1,5 @@
 <div class="title">
-  <h4>Ver estadisticas <img src="assets/iconos/arrowright.png" class="btn-icon"></h4>
+  <h4 (click)="onViewStats()">Ver estadisticas <img src="assets/iconos/arrowright.png" class="btn-icon"></h4>
 
 </div>
 <section class="stats-container">
