--- a/src/app/pages/patient/patient.html
+++ b/src/app/pages/patient/patient.html
@@ -2,7 +2,7 @@
 <main>
   <div class="info-wrapper">
     <app-info></app-info>
-    <app-stats [patientId]="patientId"></app-stats>
+    <app-stats [patientId]="patientId" [patientData]="patientData"></app-stats>
   </div>
   <div class="list-wrapper">
     <app-appointments [patientId]="patientId" [medicalRecordId]="medicalRecordId">
