--- a/src/app/pages/patient/components/stats/card/card.css
+++ b/src/app/pages/patient/components/stats/card/card.css
@@ -28,8 +28,14 @@ h5{
 }
 
 .graph-container{
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.default-stat-img{
+  width: 100%;
 }
