all inputs hovers ouuyea

--- a/src/app/pages/anthropometric-measurements/components/default/default.html
+++ b/src/app/pages/anthropometric-measurements/components/default/default.html
@@ -1,9 +1,9 @@
 <div class="avatar">
 
     @if(highlightImage){
-    <img [src]="highlightImage" alt="Área resaltada">
+    <img [src]="highlightImage" alt="Área resaltada" class="avatar-highlight">
     } @else {
-    <img src="/assets/avatar-pngs/antomia-blank.png" alt="">
+    <img src="/assets/avatar-pngs/antomia-blank.png" alt="" class="avatar-base">
     }
 
 </div>
