--- a/src/app/pages/reviews/components/review-list/review-list.html
+++ b/src/app/pages/reviews/components/review-list/review-list.html
@@ -2,9 +2,9 @@
   <div class="review-list-container" *ngIf="reviews.length > 0">
     <app-review-card 
       *ngFor="let review of reviews"
-      [patientName]="review.patientName || 'Paciente'"
+      [patientName]="review.name"
       [comment]="review.comments"
-      [gender]="review.gender || 'male'">
+      [gender]="'male'">
     </app-review-card>
   </div>
   
