--- a/src/app/pages/reviews/review-rating/review-rating.html
+++ b/src/app/pages/reviews/review-rating/review-rating.html
@@ -11,12 +11,16 @@
       </app-rating-display>
     </div>
 
-    <div class="reviews-section" *ngIf="!isLoading">
-      <app-review-list [reviews]="reviews"></app-review-list>
-    </div>
-
     <div class="loading-section" *ngIf="isLoading">
       <p>Cargando valoraciones...</p>
+    </div>
+
+    <div class="error-section" *ngIf="errorMessage && !isLoading">
+      <p>{{ errorMessage }}</p>
+    </div>
+
+    <div class="reviews-section" *ngIf="!isLoading && !errorMessage">
+      <app-review-list [reviews]="reviews"></app-review-list>
     </div>
   </div>
 </div>
