--- a/src/app/pages/patient/patient.html
+++ b/src/app/pages/patient/patient.html
@@ -5,7 +5,7 @@
     <app-stats [patientId]="patientId" [patientData]="patientData"></app-stats>
   </div>
   <div class="list-wrapper">
-    <app-appointments [patientId]="patientId" [medicalRecordId]="medicalRecordId">
+    <app-appointments [patientId]="patientId" [medicalRecordId]="medicalRecordId" [patientData]="patientData">
     </app-appointments>
   </div>
 </main>
