--- a/src/app/pages/patient/components/appointments/appointments.css
+++ b/src/app/pages/patient/components/appointments/appointments.css
@@ -29,3 +29,16 @@
   overflow-y: auto;
   box-sizing: border-box;
 }
+
+.withAppointments{
+  height: 100%;
+  min-height: 0;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  padding: 10px 0;
+  gap: 8px;
+  overflow-y: auto;
+  box-sizing: border-box;
+}
