alert modals, gracias claude sonnet por los diseños te amo

--- a/src/app/pages/anthropometric-measurements/anthropometric-measurements.html
+++ b/src/app/pages/anthropometric-measurements/anthropometric-measurements.html
@@ -46,3 +46,14 @@
         </button>
     </div>
 </section>
+
+<!-- Modal de confirmación -->
+<app-confirm-modal
+    [isVisible]="showModal"
+    [type]="modalType"
+    [title]="modalTitle"
+    [message]="modalMessage"
+    (onConfirm)="handleModalConfirm()"
+    (onCancel)="handleModalCancel()"
+    (onClose)="closeModal()">
+</app-confirm-modal>
