--- a/src/app/pages/patient/components/info/side-info/side-info.html
+++ b/src/app/pages/patient/components/info/side-info/side-info.html
@@ -1,5 +1,5 @@
 <div class="card-header">
-  <div class="edit-wrap">
+  <div class="edit-wrap" (click)="onEdit()">
     <img src="assets/iconos/edit.png" alt="" class="edit-icon">
   </div>
 </div>
