--- a/src/app/pages/auth/register/components/register-form-footer/register-form-footer.css
+++ b/src/app/pages/auth/register/components/register-form-footer/register-form-footer.css
@@ -12,6 +12,18 @@
   align-items: center;
 }
 
+h4{
+  cursor: default;
+}
+
+h5{
+  text-decoration: underline;
+}
+
+h5:hover{
+  cursor: pointer;
+}
+
 a{
   color: var(--primary-color);
 }
