--- a/src/app/pages/auth/register/components/register-form-footer/register-form-footer.html
+++ b/src/app/pages/auth/register/components/register-form-footer/register-form-footer.html
@@ -1,6 +1,6 @@
 @if (step === 1) {
   <h4>¿Ya tienes una cuenta?</h4>
-  <h5><a routerLink="/login">Inicia sesión</a></h5>
+  <h5><a (click)="toLogin()">Inicia sesión</a></h5>
 } @else {
   <section class="icon">
     <div class="icon-wrap" (click)="onPreviousStep()">
